--- a/mSystems/rev/mSys_MandM_rev.tex
+++ b/mSystems/rev/mSys_MandM_rev.tex
@@ -33,7 +33,7 @@ of the microbiota, assuming that it is in equilibrium (the ordered phase).
 
 %%
 \subsection*{Standardization} \label{sec:stan}
-In order to properly show all the studies under common axes, we decided to standardize the Taylor parameters using the group of healthy individuals for each study independently. With this approach, all the studies can be visualized in a shared plot with units of Taylor--parameter standard--deviation on their axes.
+In order to properly show all the studies under common axes, we decided to standardize the Taylor parameters using the group of healthy individuals for every single study independently. With this approach, all the studies can be visualized in a shared plot with units of Taylor--parameter standard--deviation on their axes.
 
 For a Taylor's parameter, e.g. $V$, the estimate of the mean ($\widehat{V}$) for the healthy subpopulation, composed of $h$ individuals, is:
 \begin{linenomath}
@@ -57,13 +57,13 @@ $$\widehat{\sigma}_V = \sqrt{\frac{1}{1-\sum_i^h \omega_i^2}\sum_{i=1}^h\left[\o
 %%
 \subsection*{Selection and Methods}
 
-The bacteria and archaea taxonomic assignations were obtained by analyzing 16S rRNA sequences, which were clustered into operational taxonomic units (OTUs) sharing 97\% of their sequence identity using QIIME \cite{QIIME}. Shotgun metagenomic sequencing (SMS) data\cite{kwashiorkor} were analyzed and assigned at strain level by the Livermore Metagenomic Analysis Toolkit (LMAT)\cite{LMAT}, according to their default quality threshold. Genus, with the best balance between error assignment and number of taxa, was chosen as our reference taxonomic level. We verified that our conclusions were not significantly affected by selecting family or species as the reference taxonomic level (see Supplementary Figure \ref{supfig:taxlev1}).
+The bacteria and archaea taxonomic assignations were obtained by analyzing 16S rRNA sequences, which were clustered into operational taxonomic units (OTUs) sharing 97\% of their sequence identity using QIIME \cite{QIIME}. Shotgun metagenomic sequencing (SMS) data\cite{kwashiorkor} were analyzed and assigned at strain level by the Livermore Metagenomic Analysis Toolkit (LMAT)\cite{LMAT}, according to their default quality threshold. Genus, with the best balance between error assignment and number of taxa, was chosen as our reference taxonomic level. We verified that our conclusions were not significantly affected by selecting family or species as the reference taxonomic level (see Supplementary Figure S\ref{supfig:taxlev1}).
 
 %%
 \subsubsection*{Sample selection}
-We chose studies about relevant pathologies containing metagenomic sequencing time data series of bacterial populations from humans in different healthy and non-healthy states. Only those individuals who had three or more time points of data available in databases were selected. The study by Caporaso \textit{et al.} study \cite{moving} was selected as it featured two healthy individuals measured over a very long timespan, with almost daily sampling. The study of Faith \textit{et al.} \cite{LEA} was selected given the BMI differences between subjects. Moreover, some of them followed diets which could be treated as system perturbations. Only those individuals who had normal or overweight BMI were considered as healthy. The study by Smith \textit{et al.} \cite{kwashiorkor} was selected for both the age of the patients and the rare disease. We only worked with the discordant twins, and considered those who were not affected by kwashiorkor in each pair of patients as being healthy. The study by David \textit{et al.} \cite{diet}was selected for its differential diets. The healthy part was considered to be the first time samples of each individual before the diet, while the rest of the time points were considered as perturbations. Dethlefsen and Relman's work \cite{antibiotic} was selected due to the interesting treatment of two antibiotic intakes by three different subjects of the same antibiotic. The healthy part was considered to be only those times before any antibiotic treatment, and the time of antibiotic intakes and the period after that as perturbations. The work by David \textit{et al.} \cite{hostlife} was selected due to the comprehensive longitudinal data that it provides plus its complete metadata and the interesting events that happened to both subjects (an infection and a trip abroad). The healthy part was taken as the previous time points before each event. Finally, we also considered a study from our group carried out by Durban \textit{et al.} \cite{IBS} in which the healthy subjects were considered as those who did not suffer from irritable bowel syndrome, while the patients who had this disease were taken as perturbations. 
+We chose studies about relevant pathologies containing metagenomic sequencing time data series of bacterial populations from humans in different healthy and non-healthy states. Only those individuals who had three or more time points of data available in databases were selected. The study by Caporaso \textit{et al.} study \cite{moving} was selected as it featured two healthy individuals measured over a very long timespan, with almost daily sampling. The study of Faith \textit{et al.} \cite{LEA} was selected given the BMI differences between subjects. Moreover, some of them followed diets which could be treated as system perturbations. Only those individuals who had normal or overweight BMI were considered as healthy. The study by Smith \textit{et al.} \cite{kwashiorkor} was selected for both the age of the patients and the rare disease. We only worked with the discordant twins, and considered those who were not affected by kwashiorkor in each pair of patients as being healthy. The study by David \textit{et al.} \cite{diet} was selected for its differential diets. The healthy part was considered to be the first time samples of each individual before the diet, while the rest of the time points were considered as perturbations. Dethlefsen and Relman's work \cite{antibiotic} was selected due to the interesting treatment of two antibiotic intakes by three different subjects of the same antibiotic. The healthy part was considered to be only those times before any antibiotic treatment, and the time of antibiotic intakes and the period after that as perturbations. The work by David \textit{et al.} \cite{hostlife} was selected due to the comprehensive longitudinal data that it provides plus its complete metadata and the interesting events that happened to both subjects (an infection and a trip abroad). The healthy part was taken from time points before or after each event. Finally, we also considered a study from our group carried out by Durban \textit{et al.} \cite{IBS} in which the healthy subjects were considered as those who did not suffer from irritable bowel syndrome, while the patients who had this disease were taken as perturbations. 
 
-The metadata for each study is provided in Supplementary Tables S1 to S7. They all used 16S rRNA gene sequencing, except for the study of the discordant kwashiorkor twins\cite{kwashiorkor}, in which both SMS and 16S rRNA data were used. In the latter case, we chose to work with SMS data to show that our method was valid, regardless of the source of taxonomic information. Each of the datasets was treated as follows:
+The metadata for each study is provided in Supplementary Tables S\ref{tab:diet} to S\ref{tab:LEA}. They all used 16S rRNA gene sequencing, except for the study of the discordant kwashiorkor twins\cite{kwashiorkor}, in which both SMS and 16S rRNA data were used. In the latter case, we chose to work with SMS data to show that our method was valid, regardless of the source of taxonomic information. Each of the datasets was treated as follows:
 
 %%
 \subsubsection*{16rRNA sequences processing}
@@ -75,7 +75,7 @@ Shotgun metagenomic sequences were analyzed with LMAT (Livermore Metagenomics An
 
 %%
 \subsubsection*{Taxa level robustness}
-We selected genus as the taxonomic level for the subsequent steps of our work. In order to ensure that there were no crucial differences between adjacent taxonomic levels which could still be of relevance after standardization (see the last subsection of Material and Methods), we tested two different data sets. In the former, the antibiotics study\cite{antibiotic} with 16S data, we tested the differences between genus and family levels. The latter dataset tested was the kwashiorkor discordant twins study\cite{kwashiorkor} for both genus and species taxonomic levels. The Supplementary Figures \ref{supfig:taxlev1} (overview) and \ref{supfig:taxlev2} (detail) plot the comparison between studies (and so, 16S and SMS) and between adjacent taxonomic levels.
+We selected genus as the taxonomic level for the subsequent steps of our work. In order to ensure that there were no crucial differences between adjacent taxonomic levels which could still be of relevance after standardization (see the last subsection of Material and Methods), we tested two different data sets. In the former, the antibiotics study\cite{antibiotic} with 16S data, we tested the differences between genus and family levels. The latter dataset tested was the kwashiorkor discordant twins study\cite{kwashiorkor} for both genus and species taxonomic levels. The Supplementary Figures S\ref{supfig:taxlev1} (overview) and S\ref{supfig:taxlev2} (detail) plot the comparison between studies (and so, 16S and SMS) and between adjacent taxonomic levels.
 
 %TC:endignore
 \begin{supfig} 
@@ -113,11 +113,13 @@ where $v_i$ is a Gaussian random variable with mean $\mu_i=0$ and standard devia
 %%
 \subsection*{Rank Stability Index}\label{sec:RSI}
 
-The Rank Stability Index (RSI) is shown as a percentage in a separate bar on the right of the rank matrix plot in Figures \ref{fig:corrank_HLS_abroad} and \ref{fig:corrank_HLS_returned} and Supplementary Figures \ref{supfig:corrank_HLS_before} and \ref{supfig:corrank_HLS_after}. The RSI is strictly $1$ for an element whose range never changes over time, and is strictly $0$ for an element whose rank oscillates between the extremes over time. So, the RSI is calculated, per element, as $1$ less the quotient of the number of true rank hops taken between the number of maximum possible rank hops, all powered to $p$:
+The Rank Stability Index (RSI) is shown as a percentage in a separate bar on the right of the rank matrix plot in Figures \ref{fig:corrank_HLS_abroad} and \ref{fig:corrank_HLS_returned} and Supplementary Figures S\ref{supfig:corrank_HLS_before} and S\ref{supfig:corrank_HLS_after}. The RSI is strictly $1$ for an element whose range never changes over time, and is strictly $0$ for an element whose rank oscillates between the extremes over time. So, the RSI is calculated, per element, as $1$ less the quotient of the number of true rank hops taken between the number of maximum possible rank hops, all powered to $p$:
 \begin{linenomath}
 $${\rm RSI} = \left(1-\frac{\text{true rank hops}}{\text{possible rank hops}}\right)^p = \left(1-\frac{D}{(N-1)(t-1)}\right)^p$$
 \end{linenomath}
-where $D$ is the total of rank hops taken by the studied element, $N$ is the number of elements that have been ranked, and $t$ is the number of time samples. The power index $p=4$ was arbitrarily chosen to increase the resolution in the stable region. 
+where $D$ is the total of rank hops taken by the studied element, $N$ is the number of elements that have been ranked, and $t$ is the number of time samples. The power index $p=4$ was arbitrarily chosen to increase the resolution in the stable region.
+
+Finally, under the rank matrix of the aforementioned Figures there are plots relevant to the variability of the rank over time. On the one hand, the RV (Rank Variability) for a sampling point shows the absolute difference between every taxon?s rank and its accumulated abundance rank (the overall rank), averaged for all the taxa shown. On the other hand, the DV (Differences Variability) for a sampling point shows the absolute difference between every taxon?s rank at that time and the value that it had at the previous sampling point, averaged for all the taxa shown.
 
 %\normalsize
 %TC:endignore
