--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -5,7 +5,7 @@
 %\pagestyle{empty}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft I}
+%\newcommand\releasecode{REVISION draft I}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -88,8 +88,8 @@
 
 
 % word count (Need --enable-write18 or --shell-escape)
-\immediate\write18{texcount -opt=option.tc \jobname.tex > wordcount.aux} 
-\newcommand\wordcount{\verbatiminput{wordcount.aux}}
+%\immediate\write18{texcount -opt=option.tc \jobname.tex > wordcount.aux} 
+%\newcommand\wordcount{\verbatiminput{wordcount.aux}}
 
 
 %%% DOCUMENT %%%
@@ -141,7 +141,7 @@
 
 \clearpage
 \begin{table}
-  \caption{Taylor's parameters of individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to the diet, the population sampled was described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
+\caption{Taylor's parameters of individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to the diet, the population sampled was described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
 
   \begin{center}
     \begin{tabular}{*{7}{c}}
